Fixed spacing, other improvements

--- a/_sass/3-modules/_hero.scss
+++ b/_sass/3-modules/_hero.scss
@@ -109,7 +109,7 @@
   }
 
   .hero__description {
-    max-width: 530px;
+    /* max-width: 530px; */
     margin-bottom: 32px;
     font-size: 20px;
     color: var(--text-color);
